# OS_project_scheduler

./: .gitignore  CMakeLists.txt  README.md  scheduler.cpp
.github/workflows/: cpp-ci.yml
include/: Parser.h  Process.h  Reporter.h  Scheduler.h
src/: Parser.cpp  Reporter.cpp  Scheduler.cpp  main.cpp
tests/: run_cli_tests.sh
